# idle

./: .gitignore  .gitmodules  README.md  check_builds.sh  configure.sh  fetch_assets.sh
cpp/: .gitignore  CMakeLists.txt  FreeType.cpp  Makefile  additional_textures.cpp  additional_textures.hpp  application.cpp  application.cry  application.hpp  application.hry  config.hpp  crash_handler.cpp  crash_handler.hpp  database.cpp  database.hpp  draw_text.hpp  drawable.cpp  drawable.hpp  exception.hpp  fonts.cpp  fonts.hpp  fps.hpp  freetype_glue.cpp  freetype_glue.hpp  generate.sh  gl.cpp  gl.hpp  gl_programs.hpp  glass.hpp  glyph.hpp  gui.hpp  hsv.hpp  idle_defines.hpp  io.cpp  io.hpp  lodge.cpp  lodge.hpp  main_wrapper.cpp  objects.cpp  objects.hpp  (+32 more)
cpp/blue/: exception.cpp  exception.hpp
cpp/config/: assets.hpp
cpp/freetype/: CMakeLists.txt  freetype_glue.cpp  glue.cpp  glyph.hpp
cpp/game/: CMakeLists.txt  objects.hpp
cpp/game/characters/: humanoid.hpp  octavia.cpp  octavia.hpp
cpp/glass/: blocks.hpp  glass.hpp  rigs.hpp  skin.hpp  trees.hpp  utility.hpp
cpp/hotel/: gui.hpp  image_loader.cpp  image_loader.hpp  keys.hpp  room_landing.cpp  room_landing.hpp  room_model.cpp  room_model.hpp  room_stage.cpp  room_stage.hpp  service.cpp  service.cry  service.hpp  stage_crawlers.cpp  stage_crawlers.hpp  stage_include.hpp  stage_objects.cpp  stage_objects.hpp  variant.hpp
cpp/include/: almost_cpp20.hpp  colony.hpp  guard.hpp  log.hpp  math.hpp  math_defines.hpp  misc.hpp  relaxed.hpp  utf8.hpp  zlib.hpp
cpp/platform/: CMakeLists.txt  asset_access.hpp  cmd_queue.cpp  cmd_queue.hpp  context.hpp  display.hpp  egl.cpp  opengl_core_adaptive.cpp  pointer.hpp  x.cpp
cpp/png/: CMakeLists.txt  image_queue.cpp  image_queue.hpp  png.cpp  png.hpp
cpp/shaders/: CMakeLists.txt  generate.sh  shader_source.glsl
cpp/soloud/: CMakeLists.txt
cpp/soloud/ext/libmodplug/src/: load_dmf.cpp  load_mdl.cpp  load_psm.cpp  load_s3m.cpp  modplug.cpp  modplug.h  snd_flt.cpp  sndmix.cpp
cpp/soloud/include/: soloud_dcremovalfilter.h  soloud_fader.h  soloud_fftfilter.h  soloud_file.h  soloud_flangerfilter.h  soloud_lofifilter.h  soloud_speech.h  soloud_thread.h
cpp/soloud/src/audiosource/sfxr/: soloud_sfxr.cpp
cpp/soloud/src/audiosource/tedsid/: soloud_tedsid.cpp  ted.cpp
cpp/soloud/src/audiosource/wav/: soloud_wav.cpp  soloud_wavstream.cpp
cpp/soloud/src/backend/portaudio/: soloud_portaudio_dll.c
cpp/soloud/src/backend/sdl/: soloud_sdl.cpp  soloud_sdl_dll.c
cpp/soloud/src/backend/wasapi/: soloud_wasapi.cpp
cpp/soloud/src/backend/winmm/: soloud_winmm.cpp
cpp/soloud/src/backend/xaudio2/: soloud_xaudio2.cpp
cpp/soloud/src/core/: soloud.cpp  soloud_audiosource.cpp  soloud_core_setters.cpp  soloud_fader.cpp  soloud_fft.cpp
cpp/soloud/src/tools/resamplerlab/: main.cpp
cpp/soloud/src/tools/tedsid2dump/: cbmtune.cpp  psid.h  sid.h  types.h
cpp/test/: CMakeLists.txt  glass.cpp  interface.cpp  interface.hpp
src/: .gitignore  CMakeLists.txt  FreeType.cpp  FreeType.hpp  application.cpp  application.cry  application.hpp  crash_handler.cpp  database.cpp  draw_text.hpp  drawable.cpp  drawable.hpp  exception.cpp  fonts.cpp  fonts.hpp  fps.hpp  generate.sh  gl.cpp  gl.hpp  gl_programs.hpp  glass.hpp  gui.hpp  hsv.hpp  idle_try.hpp  lodge.cpp  lodge.cry  lodge.hry  main_wrapper.cpp  objects.cpp  objects.hpp  pointer.hpp  pointer_wrapper.cry  room_controller.cpp  room_controller.hpp  room_landing.cpp  room_landing.hpp  room_model.cpp  room_model.hpp  room_red.cpp  room_red.hpp  (+5 more)
src/blue/: builtin.cpp  builtin.hpp  lambda.hpp  script.cpp  script.hpp  types.hpp  what.hpp
src/hotel/: room_landing.cpp  room_landing.cry  room_landing.hpp  room_landing.hry  service.cpp  service.hry  variant.hpp  variant.hry
src/include/: colony.hpp  log.hpp  math.hpp  utf8.hpp  zlib.hpp
src/platform/: CMakeLists.txt  FreeType.cpp  FreeType.hpp  asset_access.hpp  context.hpp  display.hpp  egl.cpp  opengl_core_adaptive.hpp  os.hpp  pointer.hpp  x.cpp
src/soloud/: CMakeLists.txt
src/soloud/ext/libmodplug/src/: fastmix.cpp  load_669.cpp  load_abc.cpp  load_amf.cpp  load_ams.cpp  load_dbm.cpp  load_dsm.cpp  load_far.cpp  load_it.cpp  load_med.cpp  load_mid.cpp  load_mod.cpp  load_mt2.cpp  load_mtm.cpp  load_okt.cpp  load_pat.cpp  load_ptm.cpp  load_stm.cpp  load_ult.cpp  load_umx.cpp  load_wav.cpp  load_xm.cpp  mmcmp.cpp  snd_dsp.cpp  snd_fx.cpp  sndfile.cpp  tables.h
src/soloud/include/: soloud.h  soloud_audiosource.h  soloud_bassboostfilter.h  soloud_biquadresonantfilter.h  soloud_bus.h  soloud_c.h  soloud_echofilter.h  soloud_error.h  soloud_fft.h  soloud_file_hack_off.h  soloud_filter.h  soloud_internal.h  soloud_modplug.h  soloud_monotone.h  soloud_sfxr.h  soloud_tedsid.h  soloud_vic.h  soloud_wav.h  soloud_wavstream.h
src/soloud/src/audiosource/modplug/: soloud_modplug.cpp
src/soloud/src/audiosource/tedsid/: sid.cpp  sid.h  ted.h
src/soloud/src/audiosource/vic/: soloud_vic.cpp
src/soloud/src/backend/alsa/: soloud_alsa.cpp
src/soloud/src/backend/coreaudio/: soloud_coreaudio.cpp
src/soloud/src/backend/null/: soloud_null.cpp
src/soloud/src/backend/openal/: soloud_openal.cpp  soloud_openal_dll.c
src/soloud/src/backend/opensles/: soloud_opensles.cpp
src/soloud/src/backend/oss/: soloud_oss.cpp
src/soloud/src/backend/portaudio/: soloud_portaudio.cpp
src/soloud/src/backend/sdl2_static/: soloud_sdl2_static.cpp
src/soloud/src/backend/sdl_static/: soloud_sdl_static.cpp
src/soloud/src/core/: soloud_bus.cpp  soloud_core_3d.cpp  soloud_core_basicops.cpp  soloud_core_faderops.cpp  soloud_core_filterops.cpp  soloud_core_getters.cpp  soloud_core_voicegroup.cpp  soloud_core_voiceops.cpp  soloud_file.cpp  soloud_filter.cpp  soloud_thread.cpp
src/soloud/src/filter/: soloud_bassboostfilter.cpp  soloud_biquadresonantfilter.cpp  soloud_dcremovalfilter.cpp  soloud_echofilter.cpp  soloud_fftfilter.cpp  soloud_flangerfilter.cpp  soloud_lofifilter.cpp
src/soloud/src/tools/codegen/: main.cpp
src/soloud/src/tools/lutgen/: main.cpp
src/test/: glass.cpp  interface.cpp  interface.hpp
(+17 files in other folders)
